# ShopTalk-Chatbot

./: README.md  data_exploration.ipynb  langchain_w_rag.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
data/: listings_0_head.json
docs/docs/tutorials/: chatbot.ipynb
langchain/docs/docs/tutorials/: chatbot.ipynb
