[tool.poetry]
name = "shoptalk-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.42.2"
openai = "^1.65.2"
chromadb = "^0.6.3"
sentence-transformers = "^3.4.1"
transformers = "^4.49.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
